fix: reconcilers can now handle native Kubernetes resources
Renamed some methods and variables more appropriately as well.
Note that these fixes require fixes for:
- java-operator-sdk/java-operator-sdk#810
- java-operator-sdk/java-operator-sdk#812